--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.5.0",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "next": "14.0.4",
     "react": "^18",
