--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # 9AlyQDPw83a7UCtD
-MONGO_URL = "mongodb+srv://food-odering:9AlyQDPw83a7UCtD@cluster0.fq6ef.mongodb.net/food-ordering"
+MONGO_URL = "mongodb+srv://salmantso14:kacNI7DuKlZDct3t@cluster0.lafsi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 GOOGLE_CLIENT_ID = ""
 GOOGLE_CLIENT_SECRET = ""
+# kacNI7DuKlZDct3t
